# ChangeLog for net-irc/kmyirc
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-irc/kmyirc/ChangeLog,v 1.3 2003/02/10 12:45:01 shermann Exp $

*kmyirc-0.2.8 (10 Feb 2003)

  10 Feb 2003; Stephan Hermann <sh@sourcecode.de>: Version Bump 0.2.8 release

*kmyirc-0.2.7 (11 Oct 2002)

  11 Oct 2002; Stephan Hermann <sh@sourcecode.de>: KMyIRC 0.2.7 release. Please read the ChangeLog on http://kmyirc.sf.net/changelog.php 
*kmyirc-0.2.6 (16 Sep 2002)

  16 Sep 2002; Stephan Hermann <sh@sourcecode.de>: Second release of Gentoo ebuild script.

*kmyirc-0.2.5 (13 Sep 2002)

  13 Sep 2002; Stephan Hermann <sh@sourcecode.de>: Initial release of Gentoo ebuild script.