@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/kmyirc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-irc/kmyirc/ChangeLog,v 1.3 2003/02/10 12:45:01 shermann Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-irc/kmyirc/ChangeLog,v 1.4 2003/04/22 09:15:23 shermann Exp $
+
+*kmyirc-0.2.9 (22 Apr 2003)
+
+  22 Apr 2003; Stephan Hermann <sh@sourcecode.de>: Version Bump 0.2.9 release
+  Please read the ChangeLog on http://www.kmyirc.de/changelog.php
 
 *kmyirc-0.2.8 (10 Feb 2003)
 
